# Anticipate-Act-Optimizing-Customer-Retention-Strategies

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/processed/: X_test.csv  X_train.csv
models/: feature_columns.json  final_model.pkl  model_scores.json  scaler.pkl
notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_modeling.ipynb  04_evaluation.ipynb  05_business_insights.ipynb
reports/: CEO_Telco_Churn_Business_Report.docx  churn_report.md  classification_report.csv  confusion_matrix.csv  customer_scores.csv  evaluation_metrics.csv  feature_importance.csv
src/telco_churn/: data_preprocessing.py  evaluate_model.py  feature_engineering.py  predict.py  train_model.py  utils.py
src/telco_churn.egg-info/: PKG-INFO  SOURCES.txt
